...
public var surveyTask: ORKOrderedTask {
    let questions: [Question] = [
        Question(
            image: UIImage(named:"duck"),
            answers: [
                Answer(text: "A cat", value: 0),
                Answer(text: "A duck", value: 1),
                Answer(text: "Nothing", value: 0)
            ]
        ),
        Question(
            image: UIImage(named:"dog"),
            answers: [
...
