...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mhg-Ts-Ajd">
                                <rect key="frame" x="252" y="445" width="97" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="6yj-cr-hCj"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="15"/>
                                <state key="normal" title="Take the survey"/>
                                <connections>
                                    <action selector="startSurvey:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cNj-Hj-Q1v"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f8z-4t-2dx">
                                <rect key="frame" x="177" y="483" width="247" height="30"/>
...
